src/libexpr/parser-tab.output
State 15 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: expr

    2 expr: expr_function

    3 expr_function: ID ':' expr_function
    4              | '{' formals '}' ':' expr_function
    5              | '{' formals '}' '@' ID ':' expr_function
    6              | ID '@' '{' formals '}' ':' expr_function
    7              | ASSERT expr ';' expr_function
    8              | WITH expr ';' expr_function
    9              | LET binds IN_KW expr_function
   10              | expr_if

   11 expr_if: IF expr THEN expr ELSE expr
   12        | expr_op

   13 expr_op: '!' expr_op
   14        | '-' expr_op
   15        | expr_op EQ expr_op
   16        | expr_op NEQ expr_op
   17        | expr_op '<' expr_op
   18        | expr_op LEQ expr_op
   19        | expr_op '>' expr_op
   20        | expr_op GEQ expr_op
   21        | expr_op AND expr_op
   22        | expr_op OR expr_op
   23        | expr_op IMPL expr_op
   24        | expr_op UPDATE expr_op
   25        | expr_op '?' attrpath
   26        | expr_op '+' expr_op
   27        | expr_op '-' expr_op
   28        | expr_op '*' expr_op
   29        | expr_op '/' expr_op
   30        | expr_op CONCAT expr_op
   31        | expr_app

   32 expr_app: expr_app expr_select
   33         | expr_select

   34 expr_select: expr_simple '.' attrpath
   35            | expr_simple '.' attrpath OR_KW expr_select
   36            | expr_simple OR_KW
   37            | expr_simple

   38 expr_simple: ID
   39            | INT_LIT
   40            | FLOAT_LIT
   41            | '"' string_parts '"'
   42            | IND_STRING_OPEN ind_string_parts IND_STRING_CLOSE
   43            | path_start PATH_END
   44            | path_start string_parts_interpolated PATH_END
   45            | SPATH
   46            | URI
   47            | '(' expr ')'
   48            | LET '{' binds '}'
   49            | REC '{' binds '}'
   50            | '{' binds '}'
   51            | '[' expr_list ']'

   52 string_parts: STR
   53             | string_parts_interpolated
   54             | ε

   55 string_parts_interpolated: string_parts_interpolated STR
   56                          | string_parts_interpolated DOLLAR_CURLY expr '}'
   57                          | DOLLAR_CURLY expr '}'
   58                          | STR DOLLAR_CURLY expr '}'

   59 path_start: PATH
   60           | HPATH

   61 ind_string_parts: ind_string_parts IND_STR
   62                 | ind_string_parts DOLLAR_CURLY expr '}'
   63                 | ε

   64 binds: binds attrpath '=' expr ';'
   65      | binds INHERIT attrs ';'
   66      | binds INHERIT '(' expr ')' attrs ';'
   67      | ε

   68 attrs: attrs attr
   69      | attrs string_attr
   70      | ε

   71 attrpath: attrpath '.' attr
   72         | attrpath '.' string_attr
   73         | attr
   74         | string_attr

   75 attr: ID
   76     | OR_KW

   77 string_attr: '"' string_parts '"'
   78            | DOLLAR_CURLY expr '}'

   79 expr_list: expr_list expr_select
   80          | ε

   81 formals: formal ',' formals
   82        | formal
   83        | ε
   84        | ELLIPSIS

   85 formal: ID
   86       | ID '?' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 13
    '"' (34) 41 77
    '(' (40) 47 66
    ')' (41) 47 66
    '*' (42) 28
    '+' (43) 26
    ',' (44) 81
    '-' (45) 14 27
    '.' (46) 34 35 71 72
    '/' (47) 29
    ':' (58) 3 4 5 6
    ';' (59) 7 8 64 65 66
    '<' (60) 17
    '=' (61) 64
    '>' (62) 19
    '?' (63) 25 86
    '@' (64) 5 6
    '[' (91) 51
    ']' (93) 51
    '{' (123) 4 5 6 48 49 50
    '}' (125) 4 5 6 48 49 50 56 57 58 62 78
    error (256)
    ID <id> (258) 3 5 6 38 75 85 86
    STR <str> (259) 52 55 58
    IND_STR <str> (260) 61
    INT_LIT <n> (261) 39
    FLOAT_LIT <nf> (262) 40
    PATH <path> (263) 59
    HPATH <path> (264) 60
    SPATH <path> (265) 45
    PATH_END <path> (266) 43 44
    URI <uri> (267) 46
    IF (268) 11
    THEN (269) 11
    ELSE (270) 11
    ASSERT (271) 7
    WITH (272) 8
    LET (273) 9 48
    IN_KW (274) 9
    REC (275) 49
    INHERIT (276) 65 66
    EQ (277) 15
    NEQ (278) 16
    AND (279) 21
    OR (280) 22
    IMPL (281) 23
    OR_KW (282) 35 36 76
    DOLLAR_CURLY (283) 56 57 58 62 78
    IND_STRING_OPEN (284) 42
    IND_STRING_CLOSE (285) 42
    ELLIPSIS (286) 84
    LEQ (287) 18
    GEQ (288) 20
    UPDATE (289) 24
    NOT (290)
    CONCAT (291) 30
    NEGATE (292)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    start <e> (60)
        on left: 1
        on right: 0
    expr <e> (61)
        on left: 2
        on right: 1 7 8 11 47 56 57 58 62 64 66 78 86
    expr_function <e> (62)
        on left: 3 4 5 6 7 8 9 10
        on right: 2 3 4 5 6 7 8 9
    expr_if <e> (63)
        on left: 11 12
        on right: 10
    expr_op <e> (64)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    expr_app <e> (65)
        on left: 32 33
        on right: 31 32
    expr_select <e> (66)
        on left: 34 35 36 37
        on right: 32 33 35 79
    expr_simple <e> (67)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 34 35 36 37
    string_parts <e> (68)
        on left: 52 53 54
        on right: 41 77
    string_parts_interpolated <string_parts> (69)
        on left: 55 56 57 58
        on right: 44 53 55 56
    path_start <e> (70)
        on left: 59 60
        on right: 43 44
    ind_string_parts <ind_string_parts> (71)
        on left: 61 62 63
        on right: 42 61 62
    binds <attrs> (72)
        on left: 64 65 66 67
        on right: 9 48 49 50 64 65 66
    attrs <attrNames> (73)
        on left: 68 69 70
        on right: 65 66 68 69
    attrpath <attrNames> (74)
        on left: 71 72 73 74
        on right: 25 34 35 64 71 72
    attr <id> (75)
        on left: 75 76
        on right: 68 71 73
    string_attr <e> (76)
        on left: 77 78
        on right: 69 72 74
    expr_list <list> (77)
        on left: 79 80
        on right: 51 79
    formals <formals> (78)
        on left: 81 82 83 84
        on right: 4 5 6 81
    formal <formal> (79)
        on left: 85 86
        on right: 81 82


State 0

    0 $accept: • start $end

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    start          go to state 20
    expr           go to state 21
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 1

    3 expr_function: ID • ':' expr_function
    6              | ID • '@' '{' formals '}' ':' expr_function
   38 expr_simple: ID •

    ':'  shift, and go to state 29
    '@'  shift, and go to state 30

    $default  reduce using rule 38 (expr_simple)


State 2

   39 expr_simple: INT_LIT •

    $default  reduce using rule 39 (expr_simple)


State 3

   40 expr_simple: FLOAT_LIT •

    $default  reduce using rule 40 (expr_simple)


State 4

   59 path_start: PATH •

    $default  reduce using rule 59 (path_start)


State 5

   60 path_start: HPATH •

    $default  reduce using rule 60 (path_start)


State 6

   45 expr_simple: SPATH •

    $default  reduce using rule 45 (expr_simple)


State 7

   46 expr_simple: URI •

    $default  reduce using rule 46 (expr_simple)


State 8

   11 expr_if: IF • expr THEN expr ELSE expr

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr           go to state 31
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 9

    7 expr_function: ASSERT • expr ';' expr_function

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr           go to state 32
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 10

    8 expr_function: WITH • expr ';' expr_function

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr           go to state 33
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 11

    9 expr_function: LET • binds IN_KW expr_function
   48 expr_simple: LET • '{' binds '}'

    '{'  shift, and go to state 34

    $default  reduce using rule 67 (binds)

    binds  go to state 35


State 12

   49 expr_simple: REC • '{' binds '}'

    '{'  shift, and go to state 36


State 13

   42 expr_simple: IND_STRING_OPEN • ind_string_parts IND_STRING_CLOSE

    $default  reduce using rule 63 (ind_string_parts)

    ind_string_parts  go to state 37


State 14

   14 expr_op: '-' • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 41
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 15

    4 expr_function: '{' • formals '}' ':' expr_function
    5              | '{' • formals '}' '@' ID ':' expr_function
   50 expr_simple: '{' • binds '}'

    ID        shift, and go to state 42
    ELLIPSIS  shift, and go to state 43

    ID        [reduce using rule 67 (binds)]
    '}'       reduce using rule 67 (binds)
    '}'       [reduce using rule 83 (formals)]
    $default  reduce using rule 67 (binds)

    binds    go to state 44
    formals  go to state 45
    formal   go to state 46


State 16

   13 expr_op: '!' • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 47
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 17

   41 expr_simple: '"' • string_parts '"'

    STR           shift, and go to state 48
    DOLLAR_CURLY  shift, and go to state 49

    $default  reduce using rule 54 (string_parts)

    string_parts               go to state 50
    string_parts_interpolated  go to state 51


State 18

   47 expr_simple: '(' • expr ')'

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr           go to state 52
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 19

   51 expr_simple: '[' • expr_list ']'

    $default  reduce using rule 80 (expr_list)

    expr_list  go to state 53


State 20

    0 $accept: start • $end

    $end  shift, and go to state 54


State 21

    1 start: expr •

    $default  reduce using rule 1 (start)


State 22

    2 expr: expr_function •

    $default  reduce using rule 2 (expr)


State 23

   10 expr_function: expr_if •

    $default  reduce using rule 10 (expr_function)


State 24

   12 expr_if: expr_op •
   15 expr_op: expr_op • EQ expr_op
   16        | expr_op • NEQ expr_op
   17        | expr_op • '<' expr_op
   18        | expr_op • LEQ expr_op
   19        | expr_op • '>' expr_op
   20        | expr_op • GEQ expr_op
   21        | expr_op • AND expr_op
   22        | expr_op • OR expr_op
   23        | expr_op • IMPL expr_op
   24        | expr_op • UPDATE expr_op
   25        | expr_op • '?' attrpath
   26        | expr_op • '+' expr_op
   27        | expr_op • '-' expr_op
   28        | expr_op • '*' expr_op
   29        | expr_op • '/' expr_op
   30        | expr_op • CONCAT expr_op

    EQ      shift, and go to state 55
    NEQ     shift, and go to state 56
    AND     shift, and go to state 57
    OR      shift, and go to state 58
    IMPL    shift, and go to state 59
    '<'     shift, and go to state 60
    '>'     shift, and go to state 61
    LEQ     shift, and go to state 62
    GEQ     shift, and go to state 63
    UPDATE  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68
    CONCAT  shift, and go to state 69
    '?'     shift, and go to state 70

    $default  reduce using rule 12 (expr_if)


State 25

   31 expr_op: expr_app •
   32 expr_app: expr_app • expr_select

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '{'              shift, and go to state 40
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    $default  reduce using rule 31 (expr_op)

    expr_select  go to state 71
    expr_simple  go to state 27
    path_start   go to state 28


State 26

   33 expr_app: expr_select •

    $default  reduce using rule 33 (expr_app)


State 27

   34 expr_select: expr_simple • '.' attrpath
   35            | expr_simple • '.' attrpath OR_KW expr_select
   36            | expr_simple • OR_KW
   37            | expr_simple •

    OR_KW  shift, and go to state 72
    '.'    shift, and go to state 73

    $default  reduce using rule 37 (expr_select)


State 28

   43 expr_simple: path_start • PATH_END
   44            | path_start • string_parts_interpolated PATH_END

    STR           shift, and go to state 74
    PATH_END      shift, and go to state 75
    DOLLAR_CURLY  shift, and go to state 49

    string_parts_interpolated  go to state 76


State 29

    3 expr_function: ID ':' • expr_function

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_function  go to state 77
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 30

    6 expr_function: ID '@' • '{' formals '}' ':' expr_function

    '{'  shift, and go to state 78


State 31

   11 expr_if: IF expr • THEN expr ELSE expr

    THEN  shift, and go to state 79


State 32

    7 expr_function: ASSERT expr • ';' expr_function

    ';'  shift, and go to state 80


State 33

    8 expr_function: WITH expr • ';' expr_function

    ';'  shift, and go to state 81


State 34

   48 expr_simple: LET '{' • binds '}'

    $default  reduce using rule 67 (binds)

    binds  go to state 82


State 35

    9 expr_function: LET binds • IN_KW expr_function
   64 binds: binds • attrpath '=' expr ';'
   65      | binds • INHERIT attrs ';'
   66      | binds • INHERIT '(' expr ')' attrs ';'

    ID            shift, and go to state 83
    IN_KW         shift, and go to state 84
    INHERIT       shift, and go to state 85
    OR_KW         shift, and go to state 86
    DOLLAR_CURLY  shift, and go to state 87
    '"'           shift, and go to state 88

    attrpath     go to state 89
    attr         go to state 90
    string_attr  go to state 91


State 36

   49 expr_simple: REC '{' • binds '}'

    $default  reduce using rule 67 (binds)

    binds  go to state 92


State 37

   42 expr_simple: IND_STRING_OPEN ind_string_parts • IND_STRING_CLOSE
   61 ind_string_parts: ind_string_parts • IND_STR
   62                 | ind_string_parts • DOLLAR_CURLY expr '}'

    IND_STR           shift, and go to state 93
    DOLLAR_CURLY      shift, and go to state 94
    IND_STRING_CLOSE  shift, and go to state 95


State 38

   38 expr_simple: ID •

    $default  reduce using rule 38 (expr_simple)


State 39

   48 expr_simple: LET • '{' binds '}'

    '{'  shift, and go to state 34


State 40

   50 expr_simple: '{' • binds '}'

    $default  reduce using rule 67 (binds)

    binds  go to state 44


State 41

   14 expr_op: '-' expr_op •
   15        | expr_op • EQ expr_op
   16        | expr_op • NEQ expr_op
   17        | expr_op • '<' expr_op
   18        | expr_op • LEQ expr_op
   19        | expr_op • '>' expr_op
   20        | expr_op • GEQ expr_op
   21        | expr_op • AND expr_op
   22        | expr_op • OR expr_op
   23        | expr_op • IMPL expr_op
   24        | expr_op • UPDATE expr_op
   25        | expr_op • '?' attrpath
   26        | expr_op • '+' expr_op
   27        | expr_op • '-' expr_op
   28        | expr_op • '*' expr_op
   29        | expr_op • '/' expr_op
   30        | expr_op • CONCAT expr_op

    $default  reduce using rule 14 (expr_op)


State 42

   85 formal: ID •
   86       | ID • '?' expr

    '?'  shift, and go to state 96

    $default  reduce using rule 85 (formal)


State 43

   84 formals: ELLIPSIS •

    $default  reduce using rule 84 (formals)


State 44

   50 expr_simple: '{' binds • '}'
   64 binds: binds • attrpath '=' expr ';'
   65      | binds • INHERIT attrs ';'
   66      | binds • INHERIT '(' expr ')' attrs ';'

    ID            shift, and go to state 83
    INHERIT       shift, and go to state 85
    OR_KW         shift, and go to state 86
    DOLLAR_CURLY  shift, and go to state 87
    '}'           shift, and go to state 97
    '"'           shift, and go to state 88

    attrpath     go to state 89
    attr         go to state 90
    string_attr  go to state 91


State 45

    4 expr_function: '{' formals • '}' ':' expr_function
    5              | '{' formals • '}' '@' ID ':' expr_function

    '}'  shift, and go to state 98


State 46

   81 formals: formal • ',' formals
   82        | formal •

    ','  shift, and go to state 99

    $default  reduce using rule 82 (formals)


State 47

   13 expr_op: '!' expr_op •
   15        | expr_op • EQ expr_op
   16        | expr_op • NEQ expr_op
   17        | expr_op • '<' expr_op
   18        | expr_op • LEQ expr_op
   19        | expr_op • '>' expr_op
   20        | expr_op • GEQ expr_op
   21        | expr_op • AND expr_op
   22        | expr_op • OR expr_op
   23        | expr_op • IMPL expr_op
   24        | expr_op • UPDATE expr_op
   25        | expr_op • '?' attrpath
   26        | expr_op • '+' expr_op
   27        | expr_op • '-' expr_op
   28        | expr_op • '*' expr_op
   29        | expr_op • '/' expr_op
   30        | expr_op • CONCAT expr_op

    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68
    CONCAT  shift, and go to state 69
    '?'     shift, and go to state 70

    $default  reduce using rule 13 (expr_op)


State 48

   52 string_parts: STR •
   58 string_parts_interpolated: STR • DOLLAR_CURLY expr '}'

    DOLLAR_CURLY  shift, and go to state 100

    $default  reduce using rule 52 (string_parts)


State 49

   57 string_parts_interpolated: DOLLAR_CURLY • expr '}'

    ID               shift, and go to state 1
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    IF               shift, and go to state 8
    ASSERT           shift, and go to state 9
    WITH             shift, and go to state 10
    LET              shift, and go to state 11
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 15
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr           go to state 101
    expr_function  go to state 22
    expr_if        go to state 23
    expr_op        go to state 24
    expr_app       go to state 25
    expr_select    go to state 26
    expr_simple    go to state 27
    path_start     go to state 28


State 50

   41 expr_simple: '"' string_parts • '"'

    '"'  shift, and go to state 102


State 51

   53 string_parts: string_parts_interpolated •
   55 string_parts_interpolated: string_parts_interpolated • STR
   56                          | string_parts_interpolated • DOLLAR_CURLY expr '}'

    STR           shift, and go to state 103
    DOLLAR_CURLY  shift, and go to state 104

    $default  reduce using rule 53 (string_parts)


State 52

   47 expr_simple: '(' expr • ')'

    ')'  shift, and go to state 105


State 53

   51 expr_simple: '[' expr_list • ']'
   79 expr_list: expr_list • expr_select

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '{'              shift, and go to state 40
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19
    ']'              shift, and go to state 106

    expr_select  go to state 107
    expr_simple  go to state 27
    path_start   go to state 28


State 54

    0 $accept: start $end •

    $default  accept


State 55

   15 expr_op: expr_op EQ • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 108
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 56

   16 expr_op: expr_op NEQ • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 109
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 57

   21 expr_op: expr_op AND • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 110
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 58

   22 expr_op: expr_op OR • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 111
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 59

   23 expr_op: expr_op IMPL • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 112
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 60

   17 expr_op: expr_op '<' • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 113
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 61

   19 expr_op: expr_op '>' • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 114
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 62

   18 expr_op: expr_op LEQ • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 115
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 63

   20 expr_op: expr_op GEQ • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 116
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 64

   24 expr_op: expr_op UPDATE • expr_op

    ID               shift, and go to state 38
    INT_LIT          shift, and go to state 2
    FLOAT_LIT        shift, and go to state 3
    PATH             shift, and go to state 4
    HPATH            shift, and go to state 5
    SPATH            shift, and go to state 6
    URI              shift, and go to state 7
    LET              shift, and go to state 39
    REC              shift, and go to state 12
    IND_STRING_OPEN  shift, and go to state 13
    '-'              shift, and go to state 14
    '{'              shift, and go to state 40
    '!'              shift, and go to state 16
    '"'              shift, and go to state 17
    '('              shift, and go to state 18
    '['              shift, and go to state 19

    expr_op      go to state 117
    expr_app     go to state 25
    expr_select  go to state 26
    expr_simple  go to state 27
    path_start   go to state 28


State 65

   26 expr_op: expr_op '+' • expr_op
